# data-structures-in-c

./: .gitignore  CMakeLists.txt
cube/: cube_summation.c  cube_summation.h  file.c  main.c
cube/data_structure/ADT/: cube.c  cube.h
cube/data_structure/query/: query.c  query.h
graph/: grafo-2.h  grafo.cpp  grafo.h  grafo2.cpp  graph.c  graph.h  main.c
lists/: arbol_binario.h  list.c  list.h  lista.cpp  lista.h  lista2.cpp  lista2.h  lista3.cpp  lista_main.cpp  lista_main2.cpp  main.c  main.cpp  puzzle.cpp
lists/dl/: doubly_linked_list.h  lista3.h
lists/sl/: doubly_linked_list.c  main.c
new/: new.c  new.h
puzzle/: main.c  main.cpp  main2.cpp  puzzle.cpp  puzzle.h  puzzle2.cpp  puzzle2.h  puzzle3.cpp  puzzle3.h
queue/: main.c  queue.c  queue.h
size/: size.h
stack/: main.c  stack.c  stack.h
string/: main.c  string.c  string.h
test/: main.c
tree/: arbol.cpp  arbol.h  arbol2.cpp  arbol2.h  arbol_binario.cpp  arbol_main.cpp  arbol_main2.cpp
tree/binary/: binary_tree.c  binary_tree.h  main.c
tree/pyramid/: main.c  tree-pyramid.c  tree-pyramid.h
